# timbreine

./: CMakeLists.txt  README.md  build.sh  test.sh
include/: analysis.hpp  audio.hpp  dsp.hpp  globals.hpp  ui.hpp
qml/: MainView.qml
src/: analysis.cpp  audio.cpp  dsp.cpp  main.cpp  ui.cpp
tests/: CMakeLists.txt  test_centroid.cpp  test_flux.cpp  test_mfcc.cpp  test_rolloff.cpp  test_spectral_env.cpp
